переписан StatisticClient